--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,26 @@
 :root {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+  height: 100vh;
+  display: grid;
+  grid: 100px 1fr / 1fr 4fr;
+}
+
+.header {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  background: #afafaf;
+}
+
+.header h2 {
+  padding-left: 20px;
+  font-family: monospace;
 }
