--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,12 +1,47 @@
 .card {
   display: flex;
-  height: 150px;
-  width: 150px;
+  flex-direction: column;
 }
 
-.card p {
+.card h3 {
   text-align: center;
   align-self: center;
   width: 100%;
 }
 
+.card img {
+
+  height: 180px;
+}
+
+.position-0 {
+  grid-row: 1 / 2;
+}
+
+.position-1 {
+  grid-row: 1 / 2;
+}
+.position-2 {
+  grid-row: 1 / 2;
+}
+.position-3 {
+  grid-row: 1 / 2;
+}
+.position-4 {
+  grid-row: 1 / 2;
+}
+.position-5 {
+  grid-row: 2 / 3;
+}
+.position-6 {
+  grid-row: 2 / 3;
+}
+.position-7 {
+  grid-row: 2 / 3;
+}
+.position-8 {
+  grid-row: 2 / 3;
+}
+.position-9 {
+  grid-row: 2 / 3;
+}
