Update score state and add to handleClick for Card

--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,9 +1,8 @@
 .sidebar {
+  padding: 3rem;
   display: flex;
   flex-direction: column;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   font-size: 1.25rem;
 }
-
-
