--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
 .container {
   height: 100vh;
   display: grid;
-  grid: 100px 1fr / 1fr 4fr;
+  grid-template-rows: 100px 1fr;
+  grid-template-columns: 1fr 4fr;
 }
 
 .header {
