--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,6 +1,10 @@
 .card {
   display: flex;
   flex-direction: column;
+  border: 2px solid rgba(40, 40, 200, 0.8);
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: inset 2px 2px 5px rgba(100, 100, 100, 0.8);
 }
 
 .card h3 {
@@ -12,36 +16,4 @@
 .card img {
 
   height: 180px;
-}
-
-.position-0 {
-  grid-row: 1 / 2;
-}
-
-.position-1 {
-  grid-row: 1 / 2;
-}
-.position-2 {
-  grid-row: 1 / 2;
-}
-.position-3 {
-  grid-row: 1 / 2;
-}
-.position-4 {
-  grid-row: 1 / 2;
-}
-.position-5 {
-  grid-row: 2 / 3;
-}
-.position-6 {
-  grid-row: 2 / 3;
-}
-.position-7 {
-  grid-row: 2 / 3;
-}
-.position-8 {
-  grid-row: 2 / 3;
-}
-.position-9 {
-  grid-row: 2 / 3;
 }
